# mpc_games

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  install_manifest.txt
.devcontainer/: devcontainer.json
demographic_metrics/: DemographicMetricsGame.h  DemographicMetricsGame_impl.h  main.cpp
demographic_metrics_app/: Csv.cpp  Csv.h  DemographicMetricsApp.h  DemographicMetricsApp_impl.h  MPCTypes.h  MainUtil.h  main.cpp
demographic_metrics_app/data/: data_gen.py  test.csv  testHelper.csv  testValidateHelper_1.csv  testValidateHelper_2.csv  testValidate_1.csv
input_validation/: InputValidationGame.h  InputValidationGame_impl.h  main.cpp
